Exit for real: uiop/image, 25/30
uiop/image was 1/30, and the one member present was the lite
print-condition-backtrace. Everything but the command line is real now: exit,
the fatal-condition quartet, the three backtrace printers and the image hooks,
identically on the interpreter, the JVM and both WASM outputs.

uiop:quit is the piece rove asked for (.todo/372 row 13): a test runner ends the
process with a code, and (uiop:quit (if (rove:run :my-app/tests) 0 1)) really
does that now. ONE Lisp definition finishes the standard output streams and
calls a %host-exit primitive, so all four backends agree on what quitting means
-- including the code, masked to eight bits because that is what a POSIX host
does with it anyway and what wasi:cli/exit's u8 accepts. die and
shell-boolean-exit are written over it.

Nothing fixed grows for the two wasm backends, which is why the primitive is a
spliced Lisp library (exit.lisp / eval/ExitLibrary) rather than a tenth
wasi_snapshot_preview1 slot: Preview 1 binds proc_exit through an ordinary
rontolisp:wasm-import under the primitive's OWN name, and --component binds
wit-imported wasi:cli/exit@0.3.0 as an APPENDED USER IMPORT, since the fixed
import block does not declare that interface. A program that never quits
compiles to the same bytes as before. A --no-wasi / --no-gc reactor is refused
at compile time by name: it owns no WASI world and has no process of its own to
end.

The interpreter raises an exit signal that ESCAPES RontoLispCli.run and becomes
the process code in main -- run is embedded, and killing the calling JVM is not
a call's decision, the JvmUncaughtHandler rule. The JVM backend does emit
System.exit, and that distinction is the point: there the program did not ask to
stop, here it asked for exactly that. quit neither unwinds nor is catchable
anywhere, so unwind-protect grew an explicit no-cleanup arm for the signal --
without it the interpreter would be the one backend where something still ran
after a quit.

*lisp-i